allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-ip
  namespace: crudapp
spec:
  podSelector: {}   # apply to all pods in crudapp
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.96.0.10/32   # kube-dns ClusterIP
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
